--- a/nbs/fast image download.ipynb
+++ b/nbs/fast image download.ipynb
@@ -186,7 +186,7 @@
     }
    ],
    "source": [
-    "#the number of files downloaded, re-run the above cell in case to give another try for failed case\n",
+    "#the number of files downloaded, re-run the above cell in case to give another try for failed cases\n",
     "!ls {out_path} -1|wc -l"
    ]
   }
